--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,6 @@
         <module>magicrpc-core</module>
         <module>magicrpc-demo-api</module>
         <module>magicrpc-demo-provider</module>
+        <module>magicrpc-demo-consumer</module>
     </modules>
 </project>
