--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,27 @@
     <description>magicrpc</description>
     <properties>
         <java.version>17</java.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
     </properties>
     <modules>
         <module>magicrpc-core</module>
         <module>magicrpc-demo-api</module>
         <module>magicrpc-demo-provider</module>
         <module>magicrpc-demo-consumer</module>
+        <module>magicrpc-register-service</module>
+        <module>magicrpc-register-client</module>
+        <module>magicrpc-register-api</module>
     </modules>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
