--- a/magicrpc-demo-consumer/pom.xml
+++ b/magicrpc-demo-consumer/pom.xml
@@ -7,11 +7,11 @@
         <artifactId>magicrpc</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>magicrpc-core</artifactId>
+    <artifactId>magicrpc-demo-consumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>magicrpc-core</name>
-    <description>magicrpc-core</description>
+    <name>magicrpc-demo-consumer</name>
+    <description>magicrpc-demo-consumer</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -21,8 +21,14 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
+            <groupId>com.switchvov</groupId>
+            <artifactId>magicrpc-demo-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.switchvov</groupId>
+            <artifactId>magicrpc-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -36,4 +42,22 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
