--- a/magicrpc-register-api/pom.xml
+++ b/magicrpc-register-api/pom.xml
@@ -7,27 +7,18 @@
         <artifactId>magicrpc</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>magicrpc-core</artifactId>
+    <artifactId>magicrpc-register-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>magicrpc-core</name>
-    <description>magicrpc-core</description>
+    <name>magicrpc-register-api</name>
+    <description>magicrpc-register-api</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.switchvov</groupId>
-            <artifactId>magicrpc-register-client</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
 
         <dependency>
@@ -41,4 +32,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
