--- a/magicrpc-register-client/pom.xml
+++ b/magicrpc-register-client/pom.xml
@@ -7,26 +7,36 @@
         <artifactId>magicrpc</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>magicrpc-core</artifactId>
+    <artifactId>magicrpc-register-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>magicrpc-core</name>
-    <description>magicrpc-core</description>
+    <name>magicrpc-register-client</name>
+    <description>magicrpc-register-client</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure-processor</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.switchvov</groupId>
-            <artifactId>magicrpc-register-client</artifactId>
+            <artifactId>magicrpc-register-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
@@ -41,4 +51,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
