--- a/magicrpc-register-service/pom.xml
+++ b/magicrpc-register-service/pom.xml
@@ -7,13 +7,14 @@
         <artifactId>magicrpc</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>magicrpc-core</artifactId>
+    <artifactId>magicrpc-register-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>magicrpc-core</name>
-    <description>magicrpc-core</description>
+    <name>magicrpc-register-service</name>
+    <description>magicrpc-register-service</description>
     <properties>
         <java.version>17</java.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -21,12 +22,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-zookeeper-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
         </dependency>
         <dependency>
             <groupId>com.switchvov</groupId>
-            <artifactId>magicrpc-register-client</artifactId>
+            <artifactId>magicrpc-register-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
@@ -41,4 +46,22 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
