--- a/magicrpc-demo-consumer/src/main/resources/application.yml
+++ b/magicrpc-demo-consumer/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 server:
   port: 8085
-magicrpc:
-  providers: http://localhost:8080,http://localhost:8079,http://localhost:8078
 logging:
   level:
     com.switchvov.magicrpc.*: debug
+magicrpc:
+  zk_server: localhost:2181
+  zk_root: magicrpc
+app:
+  id: app1
+  namespace: public
+  env: dev
