--- a/magicrpc-transport/magicrpc-transport-http/magicrpc-transport-http-spring-starter/pom.xml
+++ b/magicrpc-transport/magicrpc-transport-http/magicrpc-transport-http-spring-starter/pom.xml
@@ -4,14 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.switchvov</groupId>
-        <artifactId>magicrpc</artifactId>
+        <artifactId>magicrpc-transport-http</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>magicrpc-demo-provider</artifactId>
+    <artifactId>magicrpc-transport-http-spring-starter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>magicrpc-demo-provider</name>
-    <description>magicrpc-demo-provider</description>
+    <name>magicrpc-transport-http-spring</name>
+    <description>magicrpc-transport-http-spring</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -22,33 +22,21 @@
         </dependency>
         <dependency>
             <groupId>com.switchvov</groupId>
-            <artifactId>magicrpc-demo-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.switchvov</groupId>
             <artifactId>magicrpc-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.switchvov</groupId>
-            <artifactId>magicrpc-transport-http-spring-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
 
@@ -57,16 +45,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
