--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <spring.boot.version>3.2.3</spring.boot.version>
     </properties>
     <modules>
         <module>magicrpc-core</module>
